1: Implemented the date picker in the card screen. 2: Worked on implementing UI for the portfolio screen.

--- a/app/src/main/res/layout/fragment_direct_investment.xml
+++ b/app/src/main/res/layout/fragment_direct_investment.xml
@@ -14,9 +14,12 @@
         android:id="@+id/rvDInvests"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:overScrollMode="never"
+        android:padding="@dimen/default_space"
         app:dividerV="@{@drawable/shape_transferant_divider_16dp}"
         app:layoutManager="android.support.v7.widget.LinearLayoutManager"
-        tools:context=".module.portfolio.fragments.DirectInvestmentFragment" />
+        tools:context=".module.portfolio.fragments.DirectInvestmentFragment"
+        tools:listitem="@layout/row_direct_investment_list_item" />
 
 </layout>
 
