--- a/app/src/main/res/layout/row_goal_based_investment_list_item.xml
+++ b/app/src/main/res/layout/row_goal_based_investment_list_item.xml
@@ -34,6 +34,13 @@
             app:layout_constraintTop_toTopOf="parent"
             tools:text="Home Goal" />
 
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:layout_marginTop="@dimen/space_8"
+            android:background="@color/darker_gray"
+            app:layout_constraintTop_toBottomOf="@id/tvName" />
+
         <TextView
             android:id="@+id/tvLastPriceL"
             android:layout_width="wrap_content"
