--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -17,6 +17,8 @@
     <color name="semi_white">#EADDEA</color>
     <color name="black">#000000</color>
     <color name="circular_bg">#D1F3F5</color>
+    <color name="fb_color">#3B5998</color>
+    <color name="g_plus_color">#CC5B3B</color>
     <string-array name="risk_level_color">
         <item>#00CB00</item>
         <item>#5DFE5D</item>
