--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -10,6 +10,13 @@
         <item name="android:fontFamily">@font/lato_regular</item>
     </style>
 
+    <style name="AppWindowBGThem" parent="AppTheme">
+        <!-- Customize your theme here. -->
+        <item name="android:windowBackground">@drawable/bg_login</item>
+        <item name="android:windowDisablePreview">true</item>
+        <item name="android:fontFamily">@font/lato_regular</item>
+    </style>
+
     <style name="bold">
         <item name="android:fontFamily">@font/lato_bold</item>
     </style>
