--- a/app/src/main/res/layout/fragment_learn.xml
+++ b/app/src/main/res/layout/fragment_learn.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
@@ -9,13 +10,16 @@
             type="com.tarrakki.module.learn.LearnVM" />
     </data>
 
-    <FrameLayout
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/rvArticles"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".module.learn.LearnFragment">
-
-
-
-    </FrameLayout>
+        android:paddingTop="@dimen/default_space"
+        android:clipToPadding="false"
+        app:dividerV="@{@drawable/shape_transferant_divider_16dp}"
+        app:layoutManager="android.support.v7.widget.LinearLayoutManager"
+        tools:context=".module.learn.LearnFragment"
+        tools:itemCount="5"
+        tools:listitem="@layout/row_article_list_item" />
 
 </layout>
