--- a/app/src/main/res/layout/fragment_panverify.xml
+++ b/app/src/main/res/layout/fragment_panverify.xml
@@ -28,7 +28,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@drawable/shape_edt_gray_round"
-                android:drawableEnd="@drawable/ic_user"
+                android:drawableEnd="@drawable/ic_pan_card"
                 android:hint="@string/pan_number"
                 android:inputType="text"
                 android:maxLines="1"
@@ -49,7 +49,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/default_space"
                 android:background="@drawable/shape_edt_gray_round"
-                android:drawableEnd="@drawable/ic_user"
+                android:drawableEnd="@drawable/ic_calendar"
                 android:hint="@string/date_of_birth"
                 android:maxLines="1"
                 android:paddingStart="@dimen/default_space"
@@ -70,7 +70,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/default_space"
                 android:background="@drawable/shape_edt_gray_round"
-                android:drawableEnd="@drawable/ic_user"
+                android:drawableEnd="@drawable/ic_mobile"
                 android:hint="@string/mobile_number"
                 android:inputType="number"
                 android:maxLines="1"
@@ -90,7 +90,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/default_space"
-                android:button="@drawable/selector_check_box"
+                android:button="@drawable/selector_check_box_gray"
                 android:checked="@{vm.IAmIndian}"
                 android:fontFamily="@font/lato_semibold"
                 android:gravity="center"
