--- a/app/src/main/res/layout/row_fund_list_item.xml
+++ b/app/src/main/res/layout/row_fund_list_item.xml
@@ -142,7 +142,7 @@
             android:id="@+id/tvVolatilityL"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/_1y_return"
+            android:text="@string/volatility_"
             android:textAppearance="@style/TextAppearance.AppCompat.Caption"
             app:layout_constraintStart_toStartOf="@id/guideline3"
             app:layout_constraintTop_toBottomOf="@+id/tvReturnSinceLaunch"
