1: App testing and some minor bugs fixes. 2: Api testing and encryption, decryption Algorithm issue fixed.

--- a/app/src/main/res/layout/row_article_list_item.xml
+++ b/app/src/main/res/layout/row_article_list_item.xml
@@ -110,7 +110,7 @@
             app:layout_constraintTop_toBottomOf="@id/mDivider"
             tools:text="3 Sep, 2018" />
 
-        <TextView
+        <!--<TextView
             android:id="@+id/tvComment"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -121,9 +121,10 @@
             android:text="@{article.comments + ` Comments`}"
             android:textAppearance="@style/TextAppearance.AppCompat.Caption"
             android:textColor="@color/semi_black"
+            android:visibility="gone"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@id/mDivider"
-            tools:text="46 Comments" />
+            tools:text="46 Comments" />-->
 
     </android.support.constraint.ConstraintLayout>
 
